--- a/templates/layout.html
+++ b/templates/layout.html
@@ -38,7 +38,7 @@
 {% endblock %}
 
 <br><center>
-<h3>&copy; Copyright 2019 Paulo Côto</h3>
+<h3>&copy; Copyright 2019 Diogo Silva</h3>
 </center>
 </body>
 </html>
