--- a/templates/produtos.html
+++ b/templates/produtos.html
@@ -19,7 +19,7 @@
         <tr>
             {% for li in range(min, max) %}
             <td>
-                <img src='/static/{{ folha.title }}/{{ folha.cell(row = li, column = 1).value }}.jpg'>
+                <img src='/static/{{ folha.title }}/{{ folha.cell(row = li, column = 1).value }}.jpg' width="210">
                 {% for co in range(1, folha.max_column) %}<br>
                 {{ folha.cell(row = 1, column = co).value }}:
                 {{ folha.cell(row = li, column = co).value }}
