--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,7 +19,7 @@
 {% set unidades = loja.unidades %}
 {% set total = loja.total() %}
 
-{% set icons = ['fas fa-question', 'fas fa-archive', 'fas fa-microchip', 'fas fa-desktop'] %}
+{% set icons = ['fas fa-question', 'fas fa-archive','fas fa-hard-hat', 'fas fa-motorcycle'] %}
 <div class="navbar">
   <a class="active" href="/"><i class="fa fa-fw fa-home"></i> Home</a>
   {% for nome in menu %}
