--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 {% block conteudo %}
 <center>
     <h1>Olá{% if usr %}, {{ usr }}{% endif %}.</h1>
-    <h2>Bem-vindo à nossa loja!</h2>
+    <h2>Bem-vindo à minha loja!</h2>
     <img src="/static/images/loja.png">
 </center>
 {% endblock %}
