--- a/templates/layout.html
+++ b/templates/layout.html
@@ -42,21 +42,23 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-6">
-            <h6>Sobre a nossa Loja</h6>
+            <font color="white"><h2>Sobre a nossa Loja</h2></font>
             <p> A informação disponibilizada é de carácter informativo.
               Não pretende ser exaustiva nem completa. Não nos responsabilizamos por qualquer tipo de incorrecção, embora tenhamos a preocupação de que a informação disponibilizada seja o mais correcta possível.
               Os preços, quando existentes, são indicativos e devem ser confirmados com os respectivos fornecedores ou marcas presentes neste site. </p>
           </div>
 
           <div class="col-xs-6 col-md-3">
-            <h6>Motos</h6>
+            <font color="white"><h2>Motos</h2></font>
             <p> No interior de cada motociclista existe o desejo ardente de ter e conduzir uma moto que o vai fazer-se sentir bem por dentro. </p>
             <ul class="footer-links">
             </ul>
           </div>
 
           <div class="col-xs-6 col-md-3">
-            <h6>Contactos</h6>
+            <font color="white"><h2>Contactos</h2></font>
+              <p>Rua da Alegria, 2700-200 Braga</p>
+              <p> 9195939472 </p>
             <ul class="footer-links">
             </ul>
           </div>
@@ -66,17 +68,6 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-sm-6 col-xs-12">
-            <p class="copyright-text"> Copyright 2019 Diogo Silva </a>
-            </p>
-          </div>
-
-          <div class="col-md-4 col-sm-6 col-xs-12">
-            <ul class="social-icons">
-              <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-              <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
-              <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
-            </ul>
           </div>
         </div>
       </div>
